# pyvalue

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/fx/: AUDUSD.csv  CADUSD.csv  CHFUSD.csv  CNHUSD.csv  EURUSD.csv  GBPUSD.csv  HKDUSD.csv  JPYUSD.csv  KRWUSD.csv  MXPUSD.csv  SEKUSD.csv  SGDUSD.csv
docs/: configuration.md  getting-started.md  index.md  troubleshooting.md
docs/architecture/: data-model-and-storage.md  normalization-and-facts.md
docs/development/: local-development.md  testing-and-quality.md
docs/guides/: ingestion-and-normalization.md  market-data.md  screening.md
docs/providers/: eodhd.md  sec.md
docs/refactor/: money-and-unit-kind-refactor.md
docs/reference/: cli.md  eodhd-concept-normalization.md  metrics.md  watchlist.md
docs/research/: fx-coverage-gaps-2026-07.md  qarp-dvg-metric-verification-2026-07.md  screener-na-investigation.md
pyvalue/data/: balance_sheet.py  common.py  stock.py
pyvalue/ingestion/: __init__.py  update_tickers.py
screeners/: basic_value.yml  deep_value_graham.yml  low_debt.yml  quality.yml  quality_reasonable_price.yml  quality_reasonable_price_primary.yml  value.yml  value_normalized.yml
scripts/: generate_database_review_docs.py
skills/pyvalue-screen-failure-audit/: SKILL.md
src/pyvalue/: __init__.py  cli.py  config.py  currency.py  database_review_docs.py  facts.py  fx.py  logging_utils.py  migrations.py  money.py  ranking.py  reporting.py  screening.py  storage.py
tasks/: lessons.md
tests/: cli_test_helpers.py  conftest.py  test_assets_current_fallback.py  test_cli_fx.py  test_cli_ingest.py  test_cli_paths.py  test_companies_house.py  test_currency_fx.py  test_data_models.py  test_database_review_docs.py  test_eodhd_normalization.py  test_fact_report.py  test_facts.py  test_gleif.py  test_id_keying_invariant.py  test_liabilities_current_fallback.py  test_long_term_debt_metric.py  test_long_term_debt_metric_fallbacks.py  test_market_data.py  test_metric_coverage_report.py  test_metric_recency.py  test_metrics.py  test_metrics_altman.py  test_metrics_balance_sheet.py  test_metrics_piotroski.py  test_metrics_ttm.py  test_migrations.py  test_money.py  test_normalization_sec.py  test_purge_us_nonfilers.py  test_ranking.py  test_screening.py  test_sec_ingestion.py  test_storage.py  test_uk_universe_loader.py  test_us_universe_loader.py
tests/regression/: test_annual_cadence_metrics.py  test_catalog_unknown_currency.py  test_cfo_to_ni_proportional_loss_tolerance.py  test_cfo_to_ni_single_loss_year_tolerance.py  test_da_sign_guard.py  test_debt_rollup_fallback.py  test_delisted_ticker_full_purge.py  test_delisted_ticker_retention.py  test_dividend_zero_for_non_payers.py  test_eps_ttm_phantom_quarter.py  test_ev_cash_fallback.py  test_exchange_catalog_cascade.py  test_fcf_per_share_outstanding_basis.py  test_interest_coverage_cap_material_debt_misfire.py  test_interest_coverage_debt_free_cap.py  test_interest_coverage_fy_fallback.py  test_interest_coverage_negative_quarter.py  test_invested_capital_cash_priority.py  test_iroic_capital_light_cap.py  test_issuer_rename_identity_merge.py  test_legacy_euro_statutory_fx.py  test_mass_delisting_guard.py  test_metric_cap_info_console_noise.py  test_owner_earnings_cagr_endpoint_average_guard.py  (+12 more)
(+173 files in other folders)
