[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvalue"
version = "0.1.0"
description = "Fundamental data ingestion and screening toolkit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Emre" }]
license = { text = "Proprietary" }
dependencies = [
    "pandas>=2.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
pyvalue = "pyvalue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
